hphp/test/zend/good/Zend/tests/generators/bug65161.php.expectf

Fatal error: Call to undefined function foo() in %s/bug65161.php on line 4
